# TZAitiGURU

./: .gitignore  Dockerfile  README.md  config.py  db.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
Category/: crud.py  models.py  router.py  schemas.py  service.py
Customer/: crud.py  models.py  router.py  schemas.py  service.py
Order/: crud.py  models.py  router.py  schemas.py  service.py
Product/: crud.py  models.py  router.py  schemas.py  service.py
alembic/: env.py
alembic/versions/: 56107e2a9862_initial_tables.py  b1d07426a5a8_add_indexes_for_reports.py
tests/: conftest.py  test_categories.py  test_customers.py  test_orders.py  test_products.py  test_reports.py
